update the purchase

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     <header>
         <h1>Flatdango Movie Theater</h1>
     </header>
-    <main id="main">
+    <main id="main" class="container"> 
+        <div id="first-movie">
+            <!-- Movie details -->
+            <!-- Example: Title, poster, description, etc. -->
+        </div>
         <div id="movie-menu">
             <ul id="films" class="filmlist">
                 <!-- Populate movie list dynamically -->
             </ul>
         </div>
+       
     </main> 
 </body>
 </html>
